# Full-Stack-RAG-project

./: .gitignore  DB-Design.md  README.md  old_project.toml.txt
client/: next.config.ts  package-lock.json  package.json
client/src/app/: layout.tsx  page.tsx
client/src/app/projects/: page.tsx
client/src/components/chat/: ChatInterface.tsx  MessageList.tsx  ciatationModal.tsx
client/src/components/layout/: Sidebar.tsx
client/src/lib/api/: index.ts
images/: DB-Design.md
mcps/tabular_mcp/: ReadME.md  server.py
server/: .dockerignore  Dockerfile  auth.py  database.py  docker-compose.yml  dump.rdb  main.py  pyproject.toml  tasks.py
server/logging/: database.py  main.py
server/notebooks/: simple_agent.ipynb
server/notebooks/agents/: langchain_basics.ipynb  langgraph_basics.ipynb  simple_agent.ipynb  supervisor_agent.ipynb
server/notebooks/evaluation/: ragas_experimentation.ipynb
server/notebooks/guardrails/: 1_rule_based_guardrails.ipynb
server/routers/: chats.py  files.py  projects.py  users.py
server/scripts/: mac.mk
server/src/: server.py
server/src/agents/simple_agent/: agent.py
server/src/agents/supervisor_agent/: agent.py
server/src/config/: index.py
server/src/models/: index.py
server/src/rag/ingestion/: index.py
server/src/rag/retrieval/: index.py
server/src/routes/: chatRoutes.py  projectFilesRoutes.py  projectRoutes.py
server/src/services/: celery.py  clerkAuth.py  webSrapper.py
server/supabase/: config.toml
server/supabase/migrations/: 20251224152906_chunk_search_functions.sql
tabular_mcp/: ReadME.md
(+9 files in other folders)
